--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,2 +1,23 @@
-
+{
+    "icons": [
+      {
+        "src": "icon-512x512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+      },
+      {
+        "src": "icon-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      }
+    ],
+    "name": "Budget App",
+    "short_name": "Budget",
+    "orientation": "portrait",
+    "display": "standalone",
+    "start_url": "/",
+    "background_color": "#01579b",
+    "theme_color": "#ffffff",
+    "theme-color": "#ffffff"
+  }
   
